[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/dialogue_editor/dialogue_block.gd" type="Script" id=1]
[ext_resource path="res://sprites/icons/unfilled_circle_thick.png" type="Texture" id=2]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/UI_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprites/icons/trash_small.png" type="Texture" id=5]
[ext_resource path="res://sprites/icons/trash_open_small.png" type="Texture" id=6]
[ext_resource path="res://src/dialogue_editor/TitleBarButtonHover.gd" type="Script" id=7]
[ext_resource path="res://sprites/dialogue/dialoguebox.png" type="Texture" id=8]
[ext_resource path="res://fonts/lato_20.tres" type="DynamicFont" id=9]
[ext_resource path="res://fonts/lato_27.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/hack_32.tres" type="DynamicFont" id=11]
[ext_resource path="res://src/dialogue_editor/text_edit_fixer.gd" type="Script" id=12]
[ext_resource path="res://sprites/icons/connector_small_unfilled.png" type="Texture" id=13]
[ext_resource path="res://snd/boop2.ogg" type="AudioStream" id=14]
[ext_resource path="res://src/dialogue_editor/random_pitch_sound.gd" type="Script" id=15]
[ext_resource path="res://src/dialogue_editor/dialogue_block_line_draw.gd" type="Script" id=16]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0625, 0.0625, 0.0625, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
_sections_unfolded = [ "Content Margin" ]

[sub_resource type="StyleBoxEmpty" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=14]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="Animation" id=10]

length = 0.12
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.00392157, 0 ) ]
}

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0999999, 7.45058e-009, 0.05, 0.1 ),
"transitions": PoolRealArray( 1.6245, 1, 1.7411, 9.84916 ),
"update": 0,
"values": [ Color( 87.22, 79.89, 93.88, 1 ), Color( 4, 4, 4, 1 ), Color( 2, 2, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 179.697, 163.67 )

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 379.341, 39.333 )

[node name="TitleBlock" type="Node2D" groups=[
"comment_block",
]]
use_parent_material = true
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]
node_type = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -175.0
margin_right = 177.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
region_rect = Rect2( 0, 0, 256, 256 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
_sections_unfolded = [ "Axis Stretch", "Focus", "Mouse", "Patch Margin", "Pause", "Rect", "Size Flags", "Visibility" ]

[node name="TitleBar" type="Control" parent="NinePatchRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HeadConnector" type="TextureButton" parent="NinePatchRect/TitleBar"]
visible = false
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -12.0
margin_top = 5.0
margin_right = 8.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Grow Direction", "Margin", "Mouse", "Rect", "Visibility", "texture_normal" ]

[node name="DraggableSegment" type="Button" parent="NinePatchRect/TitleBar"]
modulate = Color( 1, 1, 1, 0.603922 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = 1.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Custom Colors", "Custom Fonts", "Custom Styles", "Focus", "Margin", "Mouse", "Theme", "Visibility", "custom_colors", "custom_styles", "custom_styles/hover", "custom_styles/pressed" ]

[node name="Id_Label" type="LineEdit" parent="NinePatchRect/TitleBar"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_length = 10
secret_character = "*"
focus_mode = 1
context_menu_enabled = false
clear_button_enabled = false
placeholder_text = "ID"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Custom Colors", "Custom Fonts", "Custom Styles", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Placeholder", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_fonts/font", "custom_styles/normal" ]

[node name="DeleteButton" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -27.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true
script = ExtResource( 7 )
_sections_unfolded = [ "Hint", "Rect", "Size Flags", "Textures", "Visibility", "icon" ]

[node name="Dialogue" type="Control" parent="NinePatchRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -158.0
margin_top = 37.0
margin_right = 158.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="DialogueBoxSprite" type="Sprite" parent="NinePatchRect/Dialogue"]
position = Vector2( 156, 84.4253 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Material", "Offset", "Pause", "Script", "Transform", "Visibility" ]

[node name="CharacterLineEdit" type="LineEdit" parent="NinePatchRect/Dialogue/DialogueBoxSprite"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -356.0
margin_top = -67.0
margin_right = -211.0
margin_bottom = -42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_next = NodePath("../DialogueRichTextLabel/LineEdit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 9 )
max_length = 20
editable = false
secret_character = "*"
expand_to_text_length = true
focus_mode = 2
context_menu_enabled = false
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Custom Fonts", "Custom Styles", "Focus", "Hint", "Mouse", "Theme", "custom_fonts/font" ]

[node name="DialogueRichTextLabel" type="RichTextLabel" parent="NinePatchRect/Dialogue/DialogueBoxSprite"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -347.0
margin_top = -24.0
margin_right = 347.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "Bb Code", "Custom Fonts", "Focus", "Grow Direction", "Margin", "Mouse", "Rect", "Visibility", "custom_fonts/normal_font" ]

[node name="ColorRectOutline" type="ColorRect" parent="NinePatchRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 31.0
margin_right = 1.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.588235 )
_sections_unfolded = [ "Grow Direction", "Rect" ]

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0
margin_right = -1.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.909804, 0.894118, 0.780392, 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="DialogueTextEdit" type="TextEdit" parent="NinePatchRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 38.0
margin_right = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_previous = NodePath("../../CharacterLineEdit")
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
breakpoint_gutter = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = false
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_enabled = true
caret_block_mode = false
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 12 )
_sections_unfolded = [ "Caret", "Custom Fonts", "Focus", "Hint", "Mouse", "Placeholder", "Rect", "Size Flags", "Visibility", "custom_fonts", "custom_fonts/font", "custom_styles", "custom_styles/normal", "theme" ]
counter_camera_scroll = true

[node name="TailConnector" type="TextureButton" parent="NinePatchRect"]
visible = false
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -28.0
margin_right = 10.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
expand = true
_sections_unfolded = [ "Mouse", "Size Flags", "Textures", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/kill = SubResource( 10 )
anims/spawn = SubResource( 11 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options", "Script" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -8.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 165.382 )
shape = SubResource( 12 )
_sections_unfolded = [ "Transform", "Visibility", "shape" ]

[node name="LineDrawNode" type="Node2D" parent="."]
position = Vector2( 0, 310 )
z_index = 4
script = ExtResource( 16 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="HeadArea2D" type="Area2D" parent="."]
visible = false
position = Vector2( -10, 7.626 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 13.0
monitoring = false
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea2D"]
position = Vector2( 10.0826, 32.2122 )
shape = SubResource( 13 )
disabled = true
_sections_unfolded = [ "shape" ]

[connection signal="mouse_entered" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_exited"]
[connection signal="pressed" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_pressed"]
[connection signal="toggled" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_toggled"]
[connection signal="focus_exited" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_focus_exited"]
[connection signal="text_changed" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_text_changed"]
[connection signal="text_entered" from="NinePatchRect/TitleBar/Id_Label" to="." method="_on_Id_Label_text_entered"]
[connection signal="button_down" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_button_down"]
[connection signal="pressed" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="text_changed" from="NinePatchRect/Dialogue/DialogueBoxSprite/CharacterLineEdit" to="." method="_on_CharacterLineEdit_text_changed"]
[connection signal="button_down" from="NinePatchRect/TailConnector" to="." method="_on_TailConnector_button_down"]
[connection signal="button_up" from="NinePatchRect/TailConnector" to="." method="_on_TailConnector_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="HeadArea2D" to="." method="_on_HeadArea2D_mouse_entered"]
[connection signal="mouse_exited" from="HeadArea2D" to="." method="_on_HeadArea2D_mouse_exited"]
